[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/graphics/sci-fi/extra_border.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/sci-fi/extra_border2.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/leaf_outlines.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/leaf.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/sci-fi/xsmall-crosses_repeat.png" type="Texture" id=5]
[ext_resource path="res://ui/metricviz_components/scripts/metricviz_number.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=32]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=29]
size = 28
use_mipmaps = true
use_filter = true
extra_spacing_top = -6
extra_spacing_char = 1
font_data = SubResource( 32 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.223529, 0.588235, 0.87451, 0.0509804 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 0.996078, 0.207843 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="CanvasItemMaterial" id=23]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=24]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 50.0
margin_top = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_right = 50.0
margin_bottom = 50.0
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="CanvasItemMaterial" id=15]
blend_mode = 1

[sub_resource type="DynamicFontData" id=33]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=18]
size = 32
extra_spacing_top = -7
font_data = SubResource( 33 )

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_bottom = 4.0

[sub_resource type="DynamicFontData" id=30]
font_path = "res://assets/fonts/GemunuLibre-Medium.ttf"

[sub_resource type="DynamicFont" id=31]
size = 64
use_mipmaps = true
use_filter = true
font_data = SubResource( 30 )

[node name="MetricViz-Number" type="Control" groups=["metricviz", "metricviz_number"]]
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="VBox"]
use_parent_material = true
margin_right = 105.0
margin_bottom = 25.0
mouse_filter = 1
custom_colors/font_color = Color( 0.517647, 0.901961, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.843137, 1, 0.0392157 )
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 29 )
text = "Descr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBox"]
margin_top = 29.0
margin_right = 105.0
margin_bottom = 100.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="VBox/MarginContainer"]
margin_right = 105.0
margin_bottom = 71.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBox/MarginContainer/Background"]
modulate = Color( 0.101961, 0.670588, 1, 0.121569 )
material = SubResource( 23 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra" type="Panel" parent="VBox/MarginContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Extra2" type="Panel" parent="VBox/MarginContainer/Background"]
modulate = Color( 0.372549, 0.729412, 0.92549, 1 )
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="VBox/MarginContainer"]
margin_right = 105.0
margin_bottom = 71.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/MarginContainer/CenterContainer"]
modulate = Color( 0.603922, 0.870037, 1, 1 )
material = SubResource( 15 )
margin_right = 105.0
margin_bottom = 70.0

[node name="MetricLabelPre" type="Label" parent="VBox/MarginContainer/CenterContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.533333 )
use_parent_material = true
margin_bottom = 70.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 12 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricLabel" type="Label" parent="VBox/MarginContainer/CenterContainer/HBoxContainer"]
use_parent_material = true
margin_left = 4.0
margin_right = 101.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 31 )
text = "100"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetricLabelPost" type="Label" parent="VBox/MarginContainer/CenterContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.533333 )
use_parent_material = true
margin_left = 105.0
margin_right = 105.0
margin_bottom = 70.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 12 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaf" type="Sprite" parent="VBox/MarginContainer/CenterContainer/HBoxContainer/MetricLabelPost"]
visible = false
modulate = Color( 0.462745, 1, 0.054902, 0.686275 )
position = Vector2( 0, 24 )
scale = Vector2( 0.111437, 0.111437 )
texture = ExtResource( 4 )
offset = Vector2( 143.579, -179.474 )

[node name="Leaf2" type="Sprite" parent="VBox/MarginContainer/CenterContainer/HBoxContainer/MetricLabelPost/Leaf"]
modulate = Color( 3, 3, 3, 0.69 )
texture = ExtResource( 3 )
offset = Vector2( 143.579, -179.474 )

[node name="Tween" type="Tween" parent="."]
